# AkurAI-Monitor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  akurai-deploy.toml  deploy.sh
.github/workflows/: deploy.yml
scripts/: akurai-monitor  akurai-monitorctl  validate.sh
skills/akurai-monitor/: SKILL.md
src/: alert.rs  auth.rs  collectors.rs  config.rs  dns_metrics.rs  journald.rs  main.rs  management.rs  routes.rs  schema.rs  stream.rs
ui/: app.js  index.html  style.css
